--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "homepage": "https://github.com/Gejsi/react-audio-illustrator#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "babel-preset-react-app": "^6.0.0",
     "parcel-bundler": "^1.10.3"
   },
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react": ">= 16.3.0",
+    "react-dom": ">= 16.3.0",
+    "styled-components": "^4.0.2"
   }
 }
