--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "babel-preset-react-app": "^6.0.0",
-    "parcel-bundler": "^1.10.3"
+    "parcel-bundler": "^1.10.3",
+    "typescript": "^3.1.4"
   },
   "dependencies": {
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "react": ">= 16.3.0",
     "react-dom": ">= 16.3.0",
     "styled-components": "^4.0.2"
