--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Gejsi/react-audio-illustrator#readme",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^6.0.0",
     "parcel-bundler": "^1.10.3",
     "typescript": "^3.1.4"
@@ -25,6 +26,7 @@
   "dependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/webaudioapi": "^0.0.27",
     "react": ">= 16.3.0",
     "react-dom": ">= 16.3.0",
     "styled-components": "^4.0.2"
