--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   "dependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
-    "@types/webaudioapi": "^0.0.27",
     "react": ">= 16.3.0",
-    "react-dom": ">= 16.3.0",
-    "styled-components": "^4.0.2"
+    "react-dom": ">= 16.3.0"
   }
 }
