--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,4 @@
 {
-  "presets": [
-    "react-app"
-  ],
-  "plugins": [
-    "transform-class-properties"
-  ]
+  "presets": ["react-app"],
+  "plugins": ["transform-class-properties"]
 }
