--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "react-audio-illustrator",
   "version": "1.0.0",
   "description": "Sets of React components to visualize audio.",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build src/index.ts"
+    "build": "tsc && parcel build --no-source-maps dist/illustrator.js dist/index.js dist/linearBars.js dist/pulsingCircles.js dist/radialBars.js dist/types.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Gejsi/react-audio-illustrator.git"
   },
   "author": "Gejsi <vgejsi@gmail.com>",
+  "keywords": [
+    "react",
+    "audio",
+    "visualizer",
+    "illustrator"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Gejsi/react-audio-illustrator/issues"
@@ -29,5 +36,8 @@
   "dependencies": {
     "react": ">= 16.3.0",
     "react-dom": ">= 16.3.0"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
