--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "react-audio-illustrator",
   "version": "1.0.0",
   "description": "Sets of React components to visualize audio.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/demo.tsx",
   "scripts": {
     "start": "parcel index.html",
-    "build": "tsc && parcel build --no-source-maps dist/illustrator.js dist/index.js dist/linearBars.js dist/pulsingCircles.js dist/radialBars.js dist/types.js"
+    "build": "parcel build --no-source-maps index.html",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -23,21 +23,20 @@
   "bugs": {
     "url": "https://github.com/Gejsi/react-audio-illustrator/issues"
   },
-  "homepage": "https://github.com/Gejsi/react-audio-illustrator#readme",
+  "homepage": "https://gejsi.github.io/react-audio-illustrator/",
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^6.0.0",
+    "gh-pages": "^2.0.1",
     "parcel-bundler": "^1.10.3",
     "typescript": "^3.1.4"
   },
   "dependencies": {
     "react": ">= 16.3.0",
+    "react-audio-illustrator": "^1.0.0",
     "react-dom": ">= 16.3.0"
-  },
-  "files": [
-    "dist"
-  ]
+  }
 }
