--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "typescript": "^3.1.4"
   },
   "dependencies": {
+    "polished": "^2.3.1",
     "react": ">= 16.3.0",
     "react-audio-illustrator": "^1.0.0",
     "react-dom": ">= 16.3.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^4.1.2"
   }
 }
