--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.1.2",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
+    "@types/styled-components": "^4.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^6.0.0",
     "gh-pages": "^2.0.1",
