--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "removeComments": true,
     "strictNullChecks": true,
     "preserveConstEnums": true,
-    "declaration": true,
+    "declaration": false,
     "types": ["react", "react-dom", "styled-components"]
   },
   "include": ["src/*"],
