--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^3.1.4"
   },
   "dependencies": {
+    "humanize-duration": "^3.16.0",
     "polished": "^2.3.1",
     "react": ">= 16.3.0",
     "react-audio-illustrator": "^1.0.0",
