--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "@types/styled-components": "^4.1.2",
+    "babel-plugin-prismjs": "^1.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^6.0.0",
     "gh-pages": "^2.0.1",
@@ -37,7 +38,9 @@
   },
   "dependencies": {
     "humanize-duration": "^3.16.0",
+    "markdown-to-jsx": "^6.9.0",
     "polished": "^2.3.1",
+    "prismjs": "^1.15.0",
     "react": ">= 16.3.0",
     "react-audio-illustrator": "^1.0.0",
     "react-dom": ">= 16.3.0",
