--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "audio-illustrator",
   "version": "1.0.2",
-  "description": "Sets of React components to visualize audio.",
+  "description": "Visualize audio using the Web Audio API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
