:lipstick: Adapted the site to the new version of the package

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
     [
       "prismjs",
       {
-        "languages": ["jsx"],
+        "languages": ["jsx, javascript"],
         "plugins": ["line-numbers"],
         "theme": "okaidia",
         "css": true
