--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://gejsi.github.io/react-audio-illustrator/",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-syntax-async-generators": "^7.2.0",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "@types/styled-components": "^4.1.2",
@@ -37,12 +38,12 @@
     "typescript": "^3.1.4"
   },
   "dependencies": {
+    "audio-illustrator": "^1.0.4",
     "humanize-duration": "^3.16.0",
     "markdown-to-jsx": "^6.9.0",
     "polished": "^2.3.1",
-    "prismjs": "^1.15.0",
+    "prismjs": "^1.0.0",
     "react": ">= 16.3.0",
-    "react-audio-illustrator": "^1.0.1",
     "react-dom": ">= 16.3.0",
     "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.2"
